--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Martin Ouimet <mouimet@infini-soft.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dayjs": "^1.10.7"
+  }
 }
