get balance with graph and card working but needs refactor

--- a/packages/launch/package.json
+++ b/packages/launch/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "prettier:fix": "prettier './src/**/*.js' --write",
     "eslint:fix": "eslint ./src --fix",
@@ -39,10 +39,15 @@
     "@mui/material": "^5.2.4",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
+    "chart.js": "^3.7.1",
+    "chartjs-adapter-luxon": "^1.1.0",
+    "chartjs-plugin-streaming": "^2.0.0",
     "formik": "^2.2.6",
     "jarallax": "^1.12.8",
+    "luxon": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.0.1",
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.1",
     "react-image-lightbox": "^5.1.4",
@@ -55,14 +60,18 @@
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.2",
+    "web3": "^1.7.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "assert": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.0.2",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.2",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.4.1",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
@@ -71,10 +80,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.0",
+    "react-app-rewired": "^2.1.11",
     "rimraf": "^3.0.2",
-    "typescript": "^4.5.4"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "typescript": "^4.5.4",
+    "url": "^0.11.0"
   }
 }
