--- a/packages/launch/package.json
+++ b/packages/launch/package.json
@@ -66,6 +66,7 @@
     "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "use-count-up": "^3.0.1",
     "web-vitals": "^2.1.2",
     "web3": "^1.7.0",
     "yup": "^0.32.11"
