--- a/packages/launch/package.json
+++ b/packages/launch/package.json
@@ -42,13 +42,13 @@
     "chart.js": "^3.7.1",
     "chartjs-adapter-luxon": "^1.1.0",
     "chartjs-plugin-streaming": "^2.0.0",
+    "dayjs": "^1.10.7",
     "formik": "^2.2.6",
     "jarallax": "^1.12.8",
     "luxon": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-chartjs-2": "^4.0.1",
-    "react-countup": "^6.1.0",
     "react-dom": "^17.0.1",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
@@ -59,6 +59,7 @@
     "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "use-count-up": "^3.0.1",
     "web-vitals": "^2.1.2",
     "web3": "^1.7.0",
     "yup": "^0.32.11"
